--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>mi primer paginita by Zucho</title>
+	<title>Pagina de práctica by Zucho</title>
 </head>
 <body>
-	<h1 id="hola">Esta pagina me la ayudo a hacer Zucho</h1>
-	<h2 class="numero">estamos practicamente realizando la primera práctica</h2>
-	<h2>mi profesor se llama disque Zucho</h2>
+	<h1 id="hola">Esta es la primer página de práctica</h1>
+	<h2 class="numero">con la asesoría de Zucho</h2>
+	<h2>0123456789</h2>
 </body>
 </html>
